﻿Subtitle Edit Changelog


3.3.8 (x August 2013)
* NEW:
   * Added Hungarian language file - thx thx Zityi
   * Added a few new subtitle formats
* IMPROVED:
   * Updated Spanish language file - thx pakitonaranjo
   * Updated Polish language file - thx Admas
   * Added support for the Māori language in PAC - thx Mark
   * Allow ebu stl with 29 fps - thx Antonio
   * Minor improvements to WebVTT + added WebVTT with line# - thx Benoît
* FIXED:
   * Fix common errors: Fixed two bugs regarding Spanish "¿¡ !?" - thx Mike
   * Bug in getting result from plugin - thx Herman
   * Fix in "Unknwown format 64" - thx Mark
   * Some fixes for SCC - thx Johan


3.3.7 (3rd August 2013)
* NEW:
   * Added Spanish (Mexico) language file - thx paconaranjo
   * Added a few new subtitle formats
* IMPROVED:
   * Updated Portuguese language file - thx moob
   * Updated Basque langauge file - thx Xabier Aramendi
   * Updated Dutch language file - thx Herman
   * Updated Czech language file - thx Trottel
   * Updated Brazilian Portuguese translation - thx Igor Rückert
   * Updated German translation - thx Siegwarth
   * Moving subtitles in waveform will not allow overlap (unless 
     you hold down the shift key) - thx Leon
   * Added "regular expression" option to ocr_replace_list - thx paconaranjo
   * Waveform generator - pauses video before starting - thx fox
   * Export to Blu-ray settings now saved - thx Minh
   * Do not load plugins + subtitle formats when opening a sub - thx Orr
   * Fixed slow loading of regular expressions in "Multiple replace" - thx TeDDy
   * When opening an invalid Timed Text file an improved error will now be shown
   * A "*" will now be shown in the title bar if a subtitle has been changed
* FIXED:
   * Fixed crash/bugs in MicroDvd format - thx klm
   * Fixed annoying crash when loading a subtitle from "source view"
   * OCR - Change ocr fix language when changing spell check dictionary
   * Fixed Hebrew in PAC files - thx Yaniv