@@ -2099,6 +2099,7 @@ Keep changes?",
                 ZoomOut = "Zoom out",
                 AddParagraphHere = "Add text here",
                 AddParagraphHereAndPasteText = "Add text from clipboard here",
+                FocusTextBox = "Focus text box",
                 DeleteParagraph = "Delete text",
                 Split = "Split",
                 SplitAtCursor = "Split at cursor",
